--- a/EFB/client/main.html
+++ b/EFB/client/main.html
@@ -1,14 +1,1 @@
-<div class="navbar-fixed-top row">
-    <div class="col-sm-3">
-        <span>FSX</span>
-    </div>
-    <div class="col-sm-3">
-        <span>Aircraft</span>
-    </div>
-    <div class="col-sm-3">
-        <span>Checklists</span>
-    </div>
-    <div class="col-sm-3" >
-        <span>Airports</span>
-    </div>
-</div>
+<navbar></navbar>
